--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
     "name": "cafebot.js",
     "author": "Phil#0004",
-    "contributers": ["DopeDealers", "auguwu"],
+    "contributers": [
+        "DopeDealers",
+        "auguwu"
+    ],
     "main": "src/index.js",
     "types": "typings/index.d.ts",
     "version": "1.0.0",
     "dependencies": {
-        "chalk": "^2.4.2",
-        "events": "^3.0.0",
-        "wumpfetch": "^0.1.3"
+        "leeks.js": "^0.0.1",
+        "wumpfetch": "^0.2.1"
     },
     "devDependencies": {
-        "eslint": "^4.11.0",
-        "tslint": "^5.8.0",
-        "typescript": "^2.6.1"
+        "eslint": "^5.16.0",
+        "tslint": "^5.15.0",
+        "typescript": "^3.4.2"
     },
     "scripts": {
         "start": "node app.js"
