--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "TheOnlyKirb"
     ],
     "main": "src/index.js",
-    "version": "2.0.1-beta",
+    "version": "2.0.1-beta-2",
     "dependencies": {
         "chalk": "^2.4.2",
         "moment": "^2.24.0",
